# disposable-email-checker

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: disposable_domains.json  email_checker.py  main.py  test_email_checker.py  utils.py  whitelist_domains.json
app/modules/v1/: email_checker.py  main.py
app/modules/v1/static/: main.js  styles.css
app/modules/v1/templates/: index.html  stats.html
app/modules/v2/: email_checker.py  helper.py  main.py  routes.py  schemas.py
app/modules/v2/static/: main.js  styles.css
app/modules/v2/templates/: index.html
app/static/: main.js  styles.css
app/templates/: index.html  stats.html
