[project]
name = "disposable-email-checker"
version = "0.1.0"
description = "detect and block disposable email addresses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
    "email-validator (>=2.2.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
